{{{file_comment}}} {{{!
  This is the input mustache-template for our state syncing machines protocol (.proto) file.
  Instead of modifying the generated .proto you should modify this file.
  Generation takes place on each build of Inexor.
  For more info about how to use this template engine, read the manual of mustache (its easy).
}}}

syntax = "proto3";

import "google/protobuf/descriptor.proto";

package {{{package}}};

service TreeService
{
  // Bidirectional Streaming
  // 
  // Accepts and reads a stream of changed values from clientside, while responding with an (independent) stream of changed value messages itself.
  // The first messages will be the metadata.
  rpc Synchronize(stream TreeEvent) returns (stream TreeEvent) {}
}

/// hardcoded events which are not generated but required for the client server to be handled in an uniform way.
enum GeneralTreeEvents
{
  NO_EVENT = 0;
  FINISHED_TREE_INTRO_SEND = 1;
}

{{#shared_functions}}{{#parameter_lists}}
message SharedFunction_{{function_name_unique}}_params_{{index}} {
{{#params}}    {{{type_protobuf}}} {{{param_name}}} = {{local_index}}; // todo     [(path) = "{{{path}}}"]
{{/params}}
}
{{/parameter_lists}}{{/shared_functions}}

message TreeEvent
{
  oneof key {
  // the hardcoded events
    GeneralTreeEvents general_event = 20;

  // All global shared vars, be it in class singletons or global SharedVars
{{#shared_vars}}    {{{type_protobuf}}} {{{name_unique}}} = {{{index}}}    [(path) = "{{{path}}}", (default_value)="{{{default_value}}}"];
{{/shared_vars}}
  // All shared function events (function gets executed when event comes in)
{{#shared_functions}}{{#parameter_lists}}    SharedFunction_{{function_name_unique}}_params_{{index}} = {{index}} [(path) = "{{{path}}}"];
{{/parameter_lists}}{{/shared_functions}}
  }
}

/// We use extended options for saving metadata along the protocol.
extend google.protobuf.FieldOptions
{
  /// The path to the item in the tree.
  string path = 50000;
  /// Proto3 does not support explicit default values, so we create it as self-defined option.
  /// It needs to be statically typed, so we require anyone building a tree out of it, to convert it to the appropriate one.
  string default_value = 50001;
}
